# ACUtils

./: CMakeLists.txt  dynarray.h
include/ACUtils/: adynarray.h  astring.h  dynarray.h  macros.h  types.h
src/: adynarray.c  astring.c  dynarray.c
tests/: CMakeLists.txt
tests/src/: test_adynarray.c  test_astring.c  test_dynarray.c  testrunner.c
